<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/course_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/academic_program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/academic_program"/>

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/academic_program"
        android:text="@string/last_name"/>

    <EditText
        android:id="@+id/last_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"/>

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_underline"
        android:text="@string/first_name"/>

    <EditText
        android:id="@+id/first_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"/>

    <TextView
        android:id="@+id/middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_underline"
        android:text="@string/middle_name"/>

    <EditText
        android:id="@+id/middle_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middle_name"/>

    <TextView
        android:id="@+id/gender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/middle_underline"
        android:text="@string/gender_name"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/gender_name">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:layout_weight="1"/>

    </RadioGroup>

    <TextView
        android:id="@+id/requirements_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:text="@string/requirements_name"/>

    <CheckBox
        android:id="@+id/report_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requirements_name"
        android:text="@string/report_card"/>

    <CheckBox
        android:id="@+id/nso_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_card"
        android:text="@string/nso_card"/>

    <CheckBox
        android:id="@+id/goodmoral_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nso_card"
        android:text="@string/goodmoral_card"/>

    <CheckBox
        android:id="@+id/junior_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goodmoral_card"
        android:text="@string/junior_card"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_below="@id/junior_card"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

</ScrollView>